--- a/app/src/main/res/layout/grid_item.xml
+++ b/app/src/main/res/layout/grid_item.xml
@@ -5,10 +5,11 @@
 
     <CheckBox
         android:id="@+id/cb_item"
-        android:buttonTint="#000000"
-        android:textColor="#000000"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="center_vertical" />
+        android:buttonTint="#000000"
+        android:fontFamily="@font/droid_sans"
+        android:gravity="center_vertical"
+        android:textColor="#000000" />
 
 </LinearLayout>
