--- a/app/src/main/res/layout/activity_checklist.xml
+++ b/app/src/main/res/layout/activity_checklist.xml
@@ -7,11 +7,56 @@
     android:layout_height="match_parent"
     tools:context=".ChecklistActivity">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/cardRecycler"
+
+    <RadioGroup android:id="@+id/toggleGroup"
+        android:layout_marginHorizontal="10dp"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:orientation="horizontal"
+        >
+
+        <ToggleButton android:id="@+id/selectAll"
+            android:layout_height="wrap_content"
+            android:layout_width="fill_parent"
+            android:layout_weight="1"
+            android:textOn="All"
+            android:textOff="ALL"
+            android:background="@color/uwYellow"
+            android:textColor="#000000"
+            android:onClick="toggleFilter"
+            android:checked="true"
+            />
+        <ToggleButton android:id="@+id/selectChecked"
+            android:layout_height="wrap_content"
+            android:layout_width="fill_parent"
+            android:layout_weight="1"
+            android:textOn="Checked"
+            android:textOff="Checked"
+            android:onClick="toggleFilter"
+            android:background="#000000"
+            android:textColor="@color/uwYellow"
+            />
+
+        <ToggleButton android:id="@+id/selectUnchecked"
+            android:layout_height="wrap_content"
+            android:layout_width="fill_parent"
+            android:layout_weight="1"
+            android:textOn="Unchecked"
+            android:textOff="Unchecked"
+            android:onClick="toggleFilter"
+            android:background="#000000"
+            android:textColor="@color/uwYellow"
+            />
+    </RadioGroup>
+    <androidx.recyclerview.widget.RecyclerView
+        android:layout_marginTop="10dp"
+        android:id="@+id/cardRecycler"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/toggleGroup"
         />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
