--- a/app/src/main/res/layout/activity_checklist.xml
+++ b/app/src/main/res/layout/activity_checklist.xml
@@ -8,9 +8,21 @@
     tools:context=".ChecklistActivity">
 
 
-    <RadioGroup android:id="@+id/toggleGroup"
-        android:layout_marginHorizontal="10dp"
+    <TextView
+        android:id="@+id/checklistTitle"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:textSize="32sp"
+        android:textColor="#000000"
+        android:fontFamily="@font/droid_sans"
+        />
+
+    <RadioGroup android:id="@+id/toggleGroup"
+        app:layout_constraintTop_toBottomOf="@id/checklistTitle"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
