--- a/app/src/main/res/layout/activity_checklist.xml
+++ b/app/src/main/res/layout/activity_checklist.xml
@@ -35,6 +35,7 @@
             android:layout_centerHorizontal="true"
             app:layout_constraintTop_toBottomOf="@id/facultyLogo"
             android:layout_marginBottom="5dp"
+            android:layout_marginHorizontal="10dp"
             />
     </RelativeLayout>
 
