--- a/app/src/main/res/layout/edittext_dialog.xml
+++ b/app/src/main/res/layout/edittext_dialog.xml
@@ -61,7 +61,7 @@
 
 
         <Button
-            android:id="@+id/dialog_confirm"
+            android:id="@+id/edit_dialog_confirm"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/dialogTextField"
@@ -73,11 +73,11 @@
             />
 
         <Button
-            android:id="@+id/dialog_cancel"
+            android:id="@+id/edit_dialog_cancel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/dialogTextField"
-            android:layout_toLeftOf="@id/dialog_confirm"
+            android:layout_toLeftOf="@id/edit_dialog_confirm"
             android:layout_marginVertical="10dp"
             android:layout_marginRight="40dp"
             android:background="@drawable/roundbtn"
