--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -24,7 +24,7 @@
         android:id="@+id/registerTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/droid_serif"
+        android:fontFamily="@font/droid_sans"
         android:text="Create a New Account"
         android:textColor="#000000"
         android:textSize="30sp"
@@ -66,6 +66,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="20dp"
+                    android:layout_marginHorizontal="20dp"
                     android:hint="Full Name"
                     app:boxBackgroundColor="@color/uwYellow"
                     app:boxStrokeColor="#000000"
@@ -84,6 +85,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="20dp"
+                    android:layout_marginHorizontal="20dp"
                     android:hint="Email"
                     app:boxBackgroundColor="@color/uwYellow"
                     app:boxStrokeColor="#000000"
@@ -103,7 +105,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="20dp"
-                    android:hint="Confirm Password"
+                    android:layout_marginHorizontal="20dp"
+                    android:hint="Password"
                     app:boxBackgroundColor="@color/uwYellow"
                     app:boxStrokeColor="#000000"
                     app:boxStrokeWidth="1dp">
@@ -122,7 +125,8 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="20dp"
                     android:layout_marginBottom="40dp"
-                    android:hint="Password"
+                    android:layout_marginHorizontal="20dp"
+                    android:hint="Confirm Password"
                     app:boxBackgroundColor="@color/uwYellow"
                     app:boxStrokeColor="#000000"
                     app:boxStrokeWidth="1dp">
