--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -8,21 +8,20 @@
     android:theme="@style/AppTheme"
     tools:context=".RegisterActivity">
 
-    <TextView
-        android:id="@+id/loginTitle"
+    <ImageView
+        android:scaleX="1.5"
+        android:scaleY="1.5"
+        android:id="@+id/loginLogo"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/droid_sans"
-        android:text="Login with Your Account"
-        android:textColor="#000000"
-        android:textSize="30sp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_height="200dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.25" />
+        app:srcCompat="@drawable/logo" />
+
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:theme="@style/Theme.MaterialComponents.Light.NoActionBar"
         android:id="@+id/loginConstraintLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -30,7 +29,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/loginTitle"
+        app:layout_constraintTop_toBottomOf="@+id/loginLogo"
         app:layout_constraintVertical_bias="0.1">
 
         <androidx.cardview.widget.CardView
@@ -56,6 +55,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="20dp"
                     android:hint="Email"
+                    app:hintTextColor="#000000"
                     app:boxBackgroundColor="@color/uwYellow"
                     app:boxStrokeColor="#000000"
                     app:boxStrokeWidth="1dp">
@@ -77,6 +77,7 @@
                     android:layout_marginTop="20dp"
                     android:layout_marginBottom="40dp"
                     android:hint="Password"
+                    app:hintTextColor="#000000"
                     app:boxBackgroundColor="@color/uwYellow"
                     app:boxStrokeColor="#000000"
                     app:boxStrokeWidth="1dp">
@@ -110,7 +111,7 @@
 
         <Button
             android:id="@+id/loginButton"
-            android:layout_width="wrap_content"
+            android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:background="@drawable/roundbtn"
             android:text="@string/common_signin_button_text"
@@ -123,17 +124,6 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <ImageView
-        android:id="@+id/loginLogo"
-        android:layout_width="415dp"
-        android:layout_height="165dp"
-        android:scrollbarSize="4dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.050000012"
-        app:srcCompat="@drawable/uw_full_logo_hori" />
 
     <TextView
         android:id="@+id/loginSwitch"
