--- a/app/src/main/res/layout/dropdown_menu_popup_item.xml
+++ b/app/src/main/res/layout/dropdown_menu_popup_item.xml
@@ -9,4 +9,5 @@
     android:maxLines="1"
     android:textColor="#000000"
     android:textAppearance="?android:attr/textAppearanceMediumInverse"
+    android:fontFamily="@font/droid_sans"
     android:textSize="14sp" />
