--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -201,7 +201,6 @@
                                     android:id="@+id/faculty_dropdown"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
-
                                     android:textSize="14sp" />
                             </com.google.android.material.textfield.TextInputLayout>
 
@@ -220,7 +219,7 @@
                                     android:id="@+id/program_dropdown"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
-
+                                    android:inputType="textNoSuggestions"
                                     android:textSize="14sp" />
                             </com.google.android.material.textfield.TextInputLayout>
 
@@ -240,7 +239,7 @@
                                     android:id="@+id/option_dropdown"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
-
+                                    android:inputType="textNoSuggestions"
                                     android:textSize="14sp" />
                             </com.google.android.material.textfield.TextInputLayout>
 
