--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -40,7 +40,7 @@
             android:textSize="30sp"
             android:textStyle="bold"
             app:layout_constraintLeft_toLeftOf="parent"
-            android:layout_marginTop="80dp"
+            android:layout_marginTop="100dp"
             android:layout_marginStart="20dp"
             app:layout_constraintTop_toTopOf="parent"/>
 
@@ -53,19 +53,18 @@
             android:textSize="18sp"
             android:textStyle="bold"
             app:layout_constraintLeft_toLeftOf="parent"
-            android:layout_marginTop="130dp"
+            android:layout_marginTop="150dp"
             android:layout_marginStart="20dp"
             app:layout_constraintTop_toTopOf="parent"/>
 
 
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="170dp"
+
             android:layout_marginBottom="-30dp"
             android:background="#FFFFFF"
             android:backgroundTint="#FFFFFF"
@@ -75,7 +74,7 @@
             <LinearLayout
                 android:orientation="vertical"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="wrap_content">
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:id="@+id/load"
