Add term and condtion nav

--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -29,4 +29,10 @@
             android:title="Log out" />
     </group>
 
+    <group>
+        <item android:id="@+id/nav_term"
+            android:icon="@drawable/term"
+            android:title="Terms and Conditions" />
+    </group>
+
 </menu>
