--- a/app/src/main/res/layout/term_and_condition_dialog.xml
+++ b/app/src/main/res/layout/term_and_condition_dialog.xml
@@ -66,7 +66,9 @@
             android:fadingEdge="vertical"
             android:scrollbars="vertical"
             android:paddingTop="10dp"
-            android:paddingBottom="75dp">
+            android:paddingBottom="75dp"
+            android:paddingLeft="5dp"
+            android:padding="5dp">
 
             <TextView
                 android:id="@+id/term_and_condition"
